# kage

./: .gitignore  Cargo.toml  README.md
crates/kage-engine/: Cargo.toml
crates/kage-engine/examples/: expand-components.rs  export-all.rs
crates/kage-engine/src/: component.rs  curve.rs  kage.rs  lib.rs  pen.rs  polygon.rs  polygons.rs  two_d.rs  utils.rs
crates/kage-engine/src/font/: gothic.rs  ming.rs  mod.rs  stroke_adjustment.rs
crates/kage-engine/src/line/: component_reference_line.rs  mod.rs  special_line.rs  stroke_line.rs
crates/kage-js/: Cargo.toml
crates/kage-js/src/: lib.rs
crates/kage-typst/: Cargo.toml  README.md  extract-all-relevant-components.ipynb  glyph-data.yaml  kage.typ  kage_typst.wasm
crates/kage-typst/src/: lib.rs
examples/: export-all.rs
misc/: generate-glyphwiki-data-sql.ipynb
src/: component.rs  curve.rs  font.rs  kage.rs  lib.rs  main.rs  pen.rs  polygon.rs  polygons.rs  stroke.rs  two_d.rs  utils.rs
src/font/: ming.rs  mod.rs  stroke_adjustment.rs
src/line/: component_reference_line.rs  mod.rs  special_line.rs  stroke_line.rs
